semantics/path/test/snapshots/better_api_semantics__path__test__part__path_part_new_basic.snap
---
source: semantics/path/test/part.rs
expression: diagnostics
---
[
    Report {
        severity: Warning,
        title: "unecessary empty path specified",
        labels: [
            Label {
                style: Primary,
                message: "unecessary empty path specified",
                span: Span {
                    start: 0,
                    end: 2,
                },
            },
        ],
        note: Some(
            "help: path should be omited instead of specifying an empty path",
        ),
    },
]
